--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,14 @@
   <meta charset="utf-8">
   <title>Vinit Paul</title>
   <base href="/">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R231CNZNHS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-R231CNZNHS');
+  </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
